syntax = "proto3";

package metrics;

option go_package = "github.com/s0n1cAK/yandex-metrics/internal/proto;proto";

message Metric {
  string id = 1;

  enum MType {
    GAUGE = 0;
    COUNTER = 1;
  }

  MType type = 2;
  int64 delta = 3;
  double value = 4;
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
}

message UpdateMetricsResponse {}

service Metrics {
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
}
